--- a/app/src/main/res/layout/fragment_purchase_history.xml
+++ b/app/src/main/res/layout/fragment_purchase_history.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/gray">
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@mipmap/ic_background_login_foreground" />
+        android:text="@string/hello_blank_fragment" />
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
