--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#0D0D0D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="green">#FF00FF00</color>
@@ -14,6 +14,4 @@
     <color name="gainsboro">#DCDCDC</color>
     <color name="gray">#808080</color>
     <color name="whitesmoke">#F5F5F5</color>
-
-
 </resources>
