--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageView2"
         android:layout_width="778dp"
         android:layout_height="1170dp"
+        android:contentDescription="@string/goku"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -44,7 +45,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.181"
         android:onClick="loadFragmentBuyTickets" />
-
 
     <Button
         android:id="@+id/button4"
