--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,7 @@
             android:autofillHints="emailAddress"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:labelFor="@id/textView"
-
-            />
+            android:labelFor="@id/textView" />
 
         <EditText
             android:id="@+id/editTextTextPassword"
@@ -44,9 +42,7 @@
             android:textColor="@color/material_dynamic_tertiary50"
             android:visibility="visible"
             tools:visibility="visible"
-            android:imeActionLabel="Introduce_password"
-
-            />
+            android:imeActionLabel="Introduce_password" />
     </LinearLayout>
 
     <Button
@@ -54,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_start"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +62,7 @@
         android:layout_width="132dp"
         android:layout_height="112dp"
         android:layout_marginTop="100dp"
-        android:contentDescription="@string/imagen_bonita"
+        android:contentDescription="@string/text_for_images"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,8 +80,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.166"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView3"
@@ -115,11 +111,12 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="108dp"
-        android:layout_height="44dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:text="@string/inicie_sesi_n"
+        android:text="@string/login_session"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
