--- a/app/src/main/res/layout/event_buttons_layout.xml
+++ b/app/src/main/res/layout/event_buttons_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -45,6 +46,17 @@
             android:id="@+id/textViewId"
             android:layout_width="match_parent"
             android:layout_height="119dp" />
+
+        <Button
+            android:id="@+id/buttonTest"
+            android:layout_width="422dp"
+            android:layout_height="182dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
