--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/login_background"
     android:scaleX="1"
     android:scaleY="1"
-    android:background="@color/lightskyblue"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -23,7 +23,7 @@
         <EditText
             android:id="@+id/editTextTextEmailAddress"
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="wrap_content"
             android:autofillHints="emailAddress"
             android:ems="10"
             android:inputType="textEmailAddress"
@@ -35,21 +35,21 @@
             android:layout_height="60dp"
             android:autofillHints="cacao"
             android:ems="100"
+            android:imeActionLabel="Introduce_password"
             android:inputType="textPassword"
             android:labelFor="@id/editTextTextPassword"
             android:singleLine="false"
-            android:textColor="@color/material_dynamic_tertiary50"
+            android:textColor="@color/black"
             android:visibility="visible"
-            tools:visibility="visible"
-            android:imeActionLabel="Introduce_password" />
+            tools:visibility="visible" />
     </LinearLayout>
 
     <Button
         android:id="@+id/button_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_start"
+        android:layout_width="216dp"
+        android:layout_height="46dp"
         android:backgroundTint="@color/black"
+        android:text="@string/button_start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,24 +62,26 @@
         android:layout_height="112dp"
         android:layout_marginTop="100dp"
         android:contentDescription="@string/text_for_images"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:layout_constraintVertical_bias="0.226"
+        app:srcCompat="@drawable/olympic_rings_without_rims_svg" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contrase_a"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.166"
-        android:textColor="@color/white" />
+        app:layout_constraintVertical_bias="0.166" />
 
     <TextView
         android:id="@+id/textView3"
@@ -87,20 +89,20 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="37dp"
         android:text="@string/nickname_indication"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.584" />
+        app:layout_constraintVertical_bias="0.602" />
 
     <TextView
-        android:textColor="@color/red"
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textColor="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -110,18 +112,19 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="120dp"
+        android:layout_width="162dp"
         android:layout_height="50dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="@string/login_session"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.367" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
