--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,90 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="778dp"
-        android:layout_height="1170dp"
-        android:contentDescription="@string/text_for_images"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.501"
-        app:srcCompat="@mipmap/ic_background_login_foreground" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home"
-        android:textColor="@color/white"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="50dp" />
+    android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:clipChildren="false">
 
     <!-- Botan Buy Tickets -->
-    <Button
-        android:id="@+id/button_comprar_tickets"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:text="@string/buy_tickets"
-        android:textSize="17sp"
-        android:backgroundTint="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button_see_history"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintHorizontal_chainStyle="spread" />
 
     <!-- Boton View All Medals -->
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:text="@string/view_all_medals"
-        android:textSize="17sp"
-        android:backgroundTint="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button_see_history"
-        app:layout_constraintStart_toEndOf="@+id/button_comprar_tickets"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread" />
 
 
     <!-- Boton Out -->
-    <Button
-        android:id="@+id/button_see_history"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:backgroundTint="@color/black"
-        android:text="@string/ver_historial_de_compra"
-        android:textSize="16sp"
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="414dp"
+        android:layout_height="737dp"
+        android:background="#00BD1414"
+        android:contentDescription="@string/text_for_images"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_go_from_main2_to_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/background3" />
+
+    <TextView
+        android:layout_width="182dp"
+        android:layout_height="56dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:lineSpacingExtra="8sp"
+        android:text="@string/home"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:typeface="normal"
+        app:layout_constraintBottom_toTopOf="@+id/button_comprar_tickets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.685"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.337"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_comprar_tickets"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="468dp"
+
+        android:backgroundTint="@color/light_blue"
+        android:backgroundTintMode="src_atop"
+        android:elevation="100dp"
+        android:text="@string/buy_tickets"
+
+        android:textSize="17sp"
+        android:translationZ="20dp"
+        app:cornerRadius="10dp"
+        app:elevation="20dp"
+        app:icon="@drawable/buy_logo2"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_comprar_tickets" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.1" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+
+        android:backgroundTint="@android:color/holo_orange_light"
+        android:text="@string/view_all_medals"
+        android:textSize="17sp"
+        android:translationZ="20dp"
+        app:cornerRadius="10dp"
+        app:elevation="20dp"
+        app:icon="@drawable/medal_logo"
+        app:layout_constraintBottom_toTopOf="@+id/button_see_history"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.86" />
+
+
+    <Button
+        android:id="@+id/button_see_history"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="@string/ver_historial_de_compra"
+        android:textSize="16sp"
+        android:translationZ="20dp"
+        app:cornerRadius="10dp"
+        app:elevation="20dp"
+        app:icon="@drawable/view_history_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_comprar_tickets"
+        app:layout_constraintVertical_bias="0.442" />
 
     <Button
         android:id="@+id/button_go_from_main2_to_main"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@android:color/holo_green_dark"
+        android:outlineProvider="bounds"
         android:text="@string/out"
         android:textSize="17sp"
-        android:backgroundTint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        android:translationZ="20dp"
+        app:cornerRadius="10dp"
+        app:elevation="20dp"
+        app:icon="@drawable/exit_logo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_see_history"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread" />
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_see_history"
+        app:layout_constraintVertical_bias="0.346" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
