--- a/app/src/main/res/layout/event_buttons_layout.xml
+++ b/app/src/main/res/layout/event_buttons_layout.xml
@@ -49,8 +49,8 @@
 
         <Button
             android:id="@+id/buttonTest"
-            android:layout_width="422dp"
-            android:layout_height="182dp"
+            android:layout_width="match_parent"
+            android:layout_height="179dp"
             android:text="Button"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
             app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
