--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="0dp"
     android:clipChildren="false">
-
-    <!-- Botan Buy Tickets -->
-
-    <!-- Boton View All Medals -->
-
-
-    <!-- Boton Out -->
 
     <ImageView
         android:id="@+id/imageView2"
@@ -36,7 +30,7 @@
         android:textColor="@color/white"
         android:textSize="34sp"
         android:typeface="normal"
-        app:layout_constraintBottom_toTopOf="@+id/button_comprar_tickets"
+        app:layout_constraintBottom_toTopOf="@+id/button_buy_tickets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.685"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,17 +38,16 @@
         app:layout_constraintVertical_bias="0.337"
         tools:ignore="MissingConstraints" />
 
+    <!-- Button Buy Tickets -->
     <Button
-        android:id="@+id/button_comprar_tickets"
+        android:id="@+id/button_buy_tickets"
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_marginBottom="468dp"
-
         android:backgroundTint="@color/light_blue"
         android:backgroundTintMode="src_atop"
         android:elevation="100dp"
         android:text="@string/buy_tickets"
-
         android:textSize="17sp"
         android:translationZ="20dp"
         app:cornerRadius="10dp"
@@ -68,11 +61,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.1" />
 
+    <!-- Button View All Medals -->
     <Button
         android:id="@+id/button4"
         android:layout_width="300dp"
         android:layout_height="70dp"
-
         android:backgroundTint="@android:color/holo_orange_light"
         android:text="@string/view_all_medals"
         android:textSize="17sp"
@@ -88,12 +81,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.86" />
 
-
+    <!-- Button Purchases History -->
     <Button
         android:id="@+id/button_see_history"
         android:layout_width="300dp"
         android:layout_height="70dp"
-
         android:backgroundTint="@android:color/holo_red_light"
         android:text="@string/ver_historial_de_compra"
         android:textSize="16sp"
@@ -106,9 +98,10 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_comprar_tickets"
+        app:layout_constraintTop_toBottomOf="@+id/button_buy_tickets"
         app:layout_constraintVertical_bias="0.442" />
 
+    <!-- Button Exit -->
     <Button
         android:id="@+id/button_go_from_main2_to_main"
         android:layout_width="300dp"
