--- a/app/src/main/res/layout/fragment_purchase_history.xml
+++ b/app/src/main/res/layout/fragment_purchase_history.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello" />
+        android:text="@string/view_purchase_history" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
