--- a/app/src/main/res/layout/fragment_purchase_history.xml
+++ b/app/src/main/res/layout/fragment_purchase_history.xml
@@ -9,7 +9,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/view_purchase_history" />
+        android:layout_marginTop="10dp"
+        android:text="@string/view_purchase_history"
+        android:textSize="23sp"
+        android:textColor="@color/black"
+        android:textAlignment="center" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPurchasesHistory"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
