--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,7 +73,7 @@
         app:cornerRadius="10dp"
         app:elevation="20dp"
         app:icon="@drawable/medal_logo"
-        app:layout_constraintBottom_toTopOf="@+id/button_see_history"
+        app:layout_constraintBottom_toTopOf="@+id/button_purchase_history"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -119,7 +119,7 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_see_history"
+        app:layout_constraintTop_toBottomOf="@+id/button_purchase_history"
         app:layout_constraintVertical_bias="0.346" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
