--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,23 +4,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/activity_main">
+    app:startDestination="@id/fragment_login">
 
-    <!-- activity_main (login) -->
-    <activity
-        android:id="@+id/activity_main"
-        android:name="com.losPro.aplicaciondearranque.MainActivity"
-        android:label="Main (login)"
-        tools:layout="@layout/activity_main" >
-        <deepLink app:uri="app://main" />
-    <!-- <action
-        android:id="@+id/action_main_to_home"
-        app:destination="@id/activity_home" /> -->
-    </activity>
-
-    <!-- activity_home -->
+    <!-- fragment_login  -->
     <fragment
-        android:id="@+id/activity_home"
+        android:id="@+id/fragment_login"
+        android:name="com.losPro.aplicaciondearranque.Login"
+        android:label="login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_fragment_login_to_fragment_home"
+            app:destination="@id/fragment_home" />
+    </fragment>
+
+    <!-- fragment_home -->
+    <fragment
+        android:id="@+id/fragment_home"
         android:name="com.losPro.aplicaciondearranque.Home"
         android:label="Home"
         tools:layout="@layout/fragment_home">
@@ -33,8 +32,10 @@
         <action
             android:id="@+id/action_home_to_fragment_purchase_history"
             app:destination="@id/fragment_purchase_history" />
+        <action
+            android:id="@+id/action_home_to_fragment_login"
+            app:destination="@id/fragment_login" />
     </fragment>
-
 
     <!-- buy_tickets -->
     <fragment
