buy tickets y view all medals

--- a/app/src/main/res/layout/fragment_buy_tickets.xml
+++ b/app/src/main/res/layout/fragment_buy_tickets.xml
@@ -9,14 +9,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEvents"
-        android:layout_width="385dp"
-        android:layout_height="711dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"/>
 
     <FrameLayout
         android:id="@+id/fragment_show_intermediarys"
