--- a/app/src/main/res/layout/event_buttons_layout.xml
+++ b/app/src/main/res/layout/event_buttons_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
 
     <androidx.cardview.widget.CardView
@@ -31,7 +31,7 @@
                 android:layout_width="100dp"
                 android:layout_height="83dp"
                 android:layout_marginEnd="16dp"
-                app:srcCompat="@drawable/ic_no_pederastians" />
+                app:srcCompat="@drawable/paris_logo" />
 
             <!-- Textos -->
             <LinearLayout
