--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -120,7 +120,7 @@
                 app:srcCompat="@drawable/paris_logo" />
 
 
-            <TextView
+            <!-- <TextView
                 android:id="@+id/text_error_credentials"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintHorizontal_bias="0.5"/>
+                app:layout_constraintHorizontal_bias="0.5"/>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
