--- a/app/src/main/res/layout/fragment_view_medals.xml
+++ b/app/src/main/res/layout/fragment_view_medals.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:background="@mipmap/background_general">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:text="@string/view_all_medals"
         android:textSize="23sp"
         android:textColor="@color/black"
-        android:textAlignment="center" />
+        android:textAlignment="center" /> -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMedals"
