--- a/app/src/main/res/layout/event_buttons_layout.xml
+++ b/app/src/main/res/layout/event_buttons_layout.xml
@@ -30,8 +30,7 @@
                 android:id="@+id/imageViewLogo"
                 android:layout_width="100dp"
                 android:layout_height="83dp"
-                android:layout_marginEnd="16dp"
-                app:srcCompat="@drawable/paris_logo" />
+                android:layout_marginEnd="16dp"  />
 
             <!-- Textos -->
             <LinearLayout
@@ -39,6 +38,21 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewSport"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="1dp"
+                    android:fontFamily="@font/archivo_thin"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <TextView
                     android:id="@+id/textViewDate"
@@ -68,12 +82,6 @@
                     android:layout_marginTop="8dp"
                     android:textColor="@color/white" />
 
-                <TextView
-                    android:id="@+id/textViewSport"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/textViewId"
