i lost count of commits... minor improvments, text color of name in login, chaged price of events, & improve the logic of the buying tickets

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -88,6 +88,7 @@
                 tools:visibility="visible" />
 
             <EditText
+                android:textColor="@color/white"
                 android:id="@+id/editTextTextEmailAddress"
                 android:layout_width="280dp"
                 android:layout_height="48dp"
